# Chapter11

./: Dockerfile  Dockerfile.Ubuntu20.04  Dockerfile.vnc  License.txt  Makefile  README.autovirtualbox  README.cloud.md  README.docker  README.md  README.virtualbox  Setup.Ubuntu20.04  autovirtualbox.sh  docker_run.sh  dockerbash.sh  dockerit.sh  dockertest.sh  dockervnc.sh  gcc_cpu_linux_laptop_tests.md  run_notes_script.py  tests.json
OpenACC/: Makefile
OpenACC/MaxRadius/: CMakeLists.txt  Makefile.simple.pgi  MaxRadius.c
OpenACC/ShallowWater/: CMakeLists.txt  ShallowWater.c  ShallowWater.h  ShallowWater_par1.c  ShallowWater_par2.c  ShallowWater_par3.c  ShallowWater_par4.c  ShallowWater_par5.c  run.sh
OpenACC/Stencil/: CMakeLists.txt  Stencil.c  Stencil_par1.c  Stencil_par2.c  Stencil_par3.c  Stencil_par4.c  Stencil_par5.c  run.sh
OpenACC/StreamTriad/: CMakeLists.txt  Makefile.simple  Makefile.simple.gcc  Makefile.simple.pgi  StreamTriad.c  StreamTriad_kern1.c  StreamTriad_kern2.c  StreamTriad_kern3.c  StreamTriad_par1.c  StreamTriad_par2.c  StreamTriad_par3.c  StreamTriad_par4.c  make.out  run.out  run.sh
OpenACC/StreamTriad/cmake/Modules/: FindOpenACC.cmake
OpenACC/mass_sum/: CMakeLists.txt  Makefile.simple.pgi  mass_sum.c  mass_sum.h
OpenMP/: Makefile
OpenMP/Stencil/: CMakeLists.txt  Makefile.simple.xl  Stencil.c  Stencil_par1.c  Stencil_par2.c  Stencil_par3.c  Stencil_par4.c  Stencil_par5.c  Stencil_par6.c  run.sh
OpenMP/Stencil/cmake/Modules/: FindOpenMPAccel.cmake
OpenMP/StreamTriad/: CMakeLists.txt  Makefile.simple.gcc  StreamTriad.c  StreamTriad_par1.c  StreamTriad_par2.c  StreamTriad_par3.c  StreamTriad_par4.c  StreamTriad_par5.c  StreamTriad_par6.c  StreamTriad_par7.c  StreamTriad_par8.c  run.sh  test_use_device_ptr.c
OpenMP/StreamTriad/cmake/Modules/: FindOpenACC.cmake  FindOpenMPAccel.cmake
